# pureplot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  notes.md  pyproject.toml
docs/: v0.2-roadmap.md
examples/: README.md  basic_line.py  basic_scatter.py
pureplot/: __init__.py  configure.py  context.py  plotter.py  policy.py
pureplot/context/: notes.md
pureplot/decorators/: notes.md
pureplot/policy/: __init__.py  colors.py  notes.md  style.py
pureplot/primitives/: __init__.py  interface.py  line.py  notes.md  result.py  scatter.py  utils.py
tests/: __init__.py  test_policy.py  test_scatter.py
